# darkmap

./: .gitignore  Cargo.toml  LICENSE  Makefile
proof/: set_v1.zk
src/: entrypoint.rs  model.rs
src/client/: mod.rs  set_v1.rs
tests/: harness.rs  integration.rs
