[package]
name = "darkmap"
version = "0.1.0"
authors = ["Dyne.org foundation <foundation@dyne.org>"]
license = "AGPL-3.0-only"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
darkfi-sdk = { path = "../darkfi-master/src/sdk" }
darkfi-serial = { path = "../darkfi-master/src/serial", features = ["derive", "crypto"] }
thiserror = "1.0.40"

chacha20poly1305 = { version = "0.10.1", optional = true }
darkfi = { path = "../darkfi-master", features = ["zk", "rpc", "blockchain"], optional = true }
log = { version = "0.4.17", optional = true }
rand = { version = "0.8.5", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.8", features = ["custom"] }

[features]
default = []
no-entrypoint = []
client = [
    "darkfi",
    "rand",
    "chacha20poly1305",
    "log",
]

[patch.crates-io]
halo2_proofs = {git="https://github.com/parazyd/halo2", branch="v4"}
halo2_gadgets = {git="https://github.com/parazyd/halo2", branch="v4"}
arti-client = {git="https://gitlab.torproject.org/tpo/core/arti", rev="77b0dc2edc93c9ad09b833b176e0f7066f017dd1"}
tor-hscrypto = {git="https://gitlab.torproject.org/tpo/core/arti", rev="77b0dc2edc93c9ad09b833b176e0f7066f017dd1"}

